Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
     "import numpy as np\n",
     "\n",
     "# Complete this function! \n",
-    "def distance(a, b, c = 2):\n",
+    "def distance(a, b, c = 2, verbose = True):\n",
     "    for \n",
     "\n",
     "test_point_1 = (1, 2)\n",
