Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c = 2, verbose = True):\n",
-    "    for i in range(len(a))\n",
+    "    for \n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
