--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,9 @@
     "def distance(a, b, c = 2, verbose = True):\n",
     "    for i in range(len(a)):\n",
     "        if i==1:\n",
-    "            distance += np.abs(a[i]  b[i])\n",
+    "            print(\"man\")\n",
+    "            distance += np.abs(a[i]  b[i])**1\n",
+    "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
