Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,9 @@
     "def distance(a, b, c = 2, verbose = True):\n",
     "    for i in range(len(a)):\n",
     "        if i==1:\n",
-    "            print(\"man\")\n",
+    "            print(\"Manhattan Distance:\")\n",
+    "            distance += np.abs(a[i]  b[i])**1\n",
+    "        elif i==2:\n",
     "            distance += np.abs(a[i]  b[i])**1\n",
     "        \n",
     "\n",
