Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,6 +65,7 @@
     "            print(\"Manhattan Distance:\")\n",
     "            distance += np.abs(a[i]  b[i])**1\n",
     "        elif i==2:\n",
+    "            print(\"Euclidean Distance:\")\n",
     "            distance += np.abs(a[i]  b[i])**1\n",
     "        \n",
     "\n",
