Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,10 +63,10 @@
     "    for i in range(len(a)):\n",
     "        if i==1:\n",
     "            print(\"Manhattan Distance:\")\n",
-    "            distance += np.abs(a[i]  b[i])**1\n",
+    "            dist += np.abs(a[i] - b[i])**1\n",
     "        elif i==2:\n",
     "            print(\"Euclidean Distance:\")\n",
-    "            distance += np.abs(a[i]  b[i])**1\n",
+    "            dist += (a[i] - b[i])**1\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
