Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,9 @@
     "            dist += np.abs(a[i] - b[i])**1\n",
     "        elif i==2:\n",
     "            print(\"Euclidean Distance:\")\n",
-    "            dist += (a[i] - b[i])**1\n",
+    "            dist += (a[i] - b[i])**2\n",
+    "            dist = np.sqrt(dist)\n",
+    "        else:\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
