Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,6 +69,8 @@
     "            dist += (a[i] - b[i])**2\n",
     "            dist = np.sqrt(dist)\n",
     "        else:\n",
+    "            dist += (a[i] - b[i])**c\n",
+    "            dist = np.power(dist)\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
