--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
     "            dist = np.sqrt(dist)\n",
     "        else:\n",
     "            dist += (a[i] - b[i])**c\n",
-    "            dist = np.power(dist)\n",
+    "            dist = np.power(dist, 1\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
