Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,8 +69,9 @@
     "            dist += (a[i] - b[i])**2\n",
     "            dist = np.sqrt(dist)\n",
     "        else:\n",
+    "            print(\"Euclidean Distance:\")\n",
     "            dist += (a[i] - b[i])**c\n",
-    "            dist = np.power(dist, 1\n",
+    "            dist = np.power(dist, 1/c)\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
