Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,14 +62,14 @@
     "def distance(a, b, c = 2, verbose = True):\n",
     "    for i in range(len(a)):\n",
     "        if i==1:\n",
-    "            print(\"Manhattan Distance:\")\n",
+    "            print(\"Manhattan_Distance:\")\n",
     "            dist += np.abs(a[i] - b[i])**1\n",
     "        elif i==2:\n",
-    "            print(\"Euclidean Distance:\")\n",
+    "            print(\"Euclidean_Distance:\")\n",
     "            dist += (a[i] - b[i])**2\n",
     "            dist = np.sqrt(dist)\n",
     "        else:\n",
-    "            print(\"Euclidean Distance:\")\n",
+    "            print(\"Minkowski_Distance_\" )\n",
     "            dist += (a[i] - b[i])**c\n",
     "            dist = np.power(dist, 1/c)\n",
     "        \n",
