Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,13 +61,13 @@
      "text": [
       "Minkowski_Distance_2:\n",
       "Manhattan_Distance:\n",
-      "None\n",
+      "7.0\n",
       "Minkowski_Distance_1:\n",
       "Manhattan_Distance:\n",
-      "None\n",
+      "1.0\n",
       "Minkowski_Distance_3:\n",
       "Manhattan_Distance:\n",
-      "None\n"
+      "nan\n"
      ]
     },
     {
@@ -96,6 +96,7 @@
     "            print(\"Minkowski_Distance_{}:\".format(c))\n",
     "            dist += (a[i] - b[i])**c\n",
     "            dist = np.power(dist, 1/c)\n",
+    "    return dist\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
