--- a/index.ipynb
+++ b/index.ipynb
@@ -81,8 +81,27 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Complete this function! \n",
-    "def distance(a, b, c = 2, verbose = True):\n",
+    "def distance(a, b, c=2, verbose=True):\n",
+    "    if len(a) != len(b):\n",
+    "        raise ValueError(\"Both vectors must be of equal length!\")\n",
+    "    \n",
+    "    root = 1 / c\n",
+    "    running_total = 0\n",
+    "    \n",
+    "    if verbose:\n",
+    "        if c == 1:\n",
+    "            print(\"Calculating Manhattan Distance:\")\n",
+    "        elif c == 2:\n",
+    "            print('Calculating Euclidean Distance:')\n",
+    "        else:\n",
+    "            print(\"Calcuating Minkowski Distance (c={}):\".format(c))\n",
+    "    \n",
+    "    for ind, val_a in enumerate(a):\n",
+    "        val_b = b[ind]\n",
+    "        running_total += np.power(np.abs(val_a - val_b), c)\n",
+    "    \n",
+    "    return np.power(running_total, root)\n",
+    "\n",
     "\n",
     "\n",
     "test_point_1 = (1, 2)\n",
