Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,29 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minkowski_Distance_2:\n",
-      "Manhattan_Distance:\n",
+      "Calculating Euclidean Distance:\n",
+      "5.0\n",
+      "Calculating Manhattan Distance:\n",
       "7.0\n",
-      "Minkowski_Distance_1:\n",
-      "Manhattan_Distance:\n",
-      "1.0\n",
-      "Minkowski_Distance_3:\n",
-      "Manhattan_Distance:\n",
-      "nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in power\n"
+      "Calcuating Minkowski Distance (c=3):\n",
+      "4.497941445275415\n"
      ]
     }
    ],
@@ -96,11 +86,14 @@
     "        else:\n",
     "            print(\"Calcuating Minkowski Distance (c={}):\".format(c))\n",
     "    \n",
-    "    for ind, val_a in enumerate(a):\n",
-    "        val_b = b[ind]\n",
-    "        running_total += np.power(np.abs(val_a - val_b), c)\n",
+    "            \n",
     "    \n",
-    "    return np.power(running_total, root)\n",
+    "    \n",
+    "#     for ind, val_a in enumerate(a):\n",
+    "#         val_b = b[ind]\n",
+    "#         running_total += np.power(np.abs(val_a - val_b), c)\n",
+    "    \n",
+    "#     return np.power(running_total, root)\n",
     "\n",
     "\n",
     "\n",
