Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "        raise ValueError(\"Both vectors must be of equal length!\")\n",
     "    \n",
     "    root = 1 / c\n",
-    "    running_total = 0\n",
+    "    dist = 0\n",
     "    \n",
     "    if verbose:\n",
     "        if c == 1:\n",
@@ -87,7 +87,8 @@
     "            print(\"Calcuating Minkowski Distance (c={}):\".format(c))\n",
     "    \n",
     "    for i in range(len(a)):\n",
-    "        runnin\n",
+    "        dist += np.power(np.abs(a[i] - b[i]), c)\n",
+    "    \n",
     "            \n",
     "    \n",
     "    \n",
