Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     "    if len(a) != len(b):\n",
     "        raise ValueError(\"Both vectors must be of equal length!\")\n",
     "    \n",
-    "    root = 1 / c\n",
+    "    \n",
     "    dist = 0\n",
     "    \n",
     "    if verbose:\n",
@@ -88,7 +88,7 @@
     "    \n",
     "    for i in range(len(a)):\n",
     "        dist += np.power(np.abs(a[i] - b[i]), c)\n",
-    "    \n",
+    "    return np.power(dist, 1/c)\n",
     "            \n",
     "    \n",
     "    \n",
