Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 17.939899665271266"
+    "   # Expected Output: 17.939899665271266\n",
+    "    \n",
+    "point1 = (-2, -3.4, 4, 15, 7)\n",
+    "\n",
+    "point2 = (3, -1.2, -2, -1, 7)    \n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
    ]
   },
   {
