Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,8 @@
     "\n",
     "point2 = (3, -1.2, -2, -1, 7)    \n",
     "\n",
-    "\n",
+    "for i in range(len(point1)):\n",
+    "    dist += np.power(abs(point1[]))\n",
     "    \n",
     "    "
    ]
