Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,18 +126,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.024216491042475"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
     "    \n",
     "point1 = (-2, -3.4, 4, 15, 7)\n",
     "\n",
-    "point2 = (3, -1.2, -2, -1, 7)    \n",
+    "point2 = (3, -1.2, -2, -1, 7)  \n",
+    "\n",
+    "dist = 0\n",
     "\n",
     "for i in range(len(point1)):\n",
-    "    dist += np.power(abs(point1[]))\n",
+    "    dist += np.power(abs(point1[i] - point2[i]),2)\n",
+    "    dist = np.power(dist, 1/2)\n",
+    "dist\n",
     "    \n",
     "    "
    ]
