--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "4.024216491042475"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,9 +149,9 @@
     "\n",
     "dist = 0\n",
     "\n",
-    "for i in range(len(point1)):\n",
+    "for i in range(5):\n",
     "    dist += np.power(abs(point1[i] - point2[i]),2)\n",
-    "    dist = np.power(dist, 1/2)\n",
+    "    dist = np.sqrt(dist)\n",
     "dist\n",
     "    \n",
     "    "
