--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "4.024216491042475"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,11 +149,9 @@
     "\n",
     "dist = 0\n",
     "\n",
-    "for i in range(5):\n",
-    "    dist += np.power(abs(point1[i] - point2[i]),2)\n",
-    "    dist = np.sqrt(dist)\n",
-    "dist\n",
-    "    \n",
+    "for i in range(len(a)):\n",
+    "    dist += np.power(np.abs(a[i] - b[i]), c)\n",
+    "    return np.power(dist, 1/c)\n",
     "    "
    ]
   },
