Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "4.024216491042475"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,16 +143,17 @@
    "source": [
     "   # Expected Output: 17.939899665271266\n",
     "    \n",
-    "point1 = (-2, -3.4, 4, 15, 7)\n",
+    "a = (-2, -3.4, 4, 15, 7)\n",
     "\n",
-    "point2 = (3, -1.2, -2, -1, 7)  \n",
+    "b = (3, -1.2, -2, -1, 7)  \n",
     "\n",
     "dist = 0\n",
     "\n",
     "for i in range(len(a)):\n",
-    "    dist += np.power(np.abs(a[i] - b[i]), c)\n",
-    "    return np.power(dist, 1/c)\n",
-    "    "
+    "    dist += np.power(np.abs(a[i] - b[i]), 2)\n",
+    "    dist = np.power(dist, 1/2)\n",
+    "    \n",
+    "dist"
    ]
   },
   {
