Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,13 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "969.5442164910424\n",
       "Calculating Euclidean Distance:\n",
       "17.939899665271266\n",
       "Calculating Euclidean Distance:\n",
@@ -147,13 +148,13 @@
     "\n",
     "b = (3, -1.2, -2, -1, 7)  \n",
     "\n",
-    "dist = 0\n",
+    "total = 0\n",
     "\n",
     "for i in range(5):\n",
     "    dist += np.power(np.abs(a[i] - b[i]), 2)\n",
-    "    dist = np.power(dist, 1/2)\n",
+    "    total = np.power(dist, 1/2)\n",
     "    \n",
-    "p\n",
+    "print(dist)\n",
     "\n",
     "print(distance((-2, -3.4, 4, 15, 7), (3, -1.2, -2, -1, 7)))\n",
     "\n",
