Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "969.5442164910424\n",
+      "1291.3842164910425\n",
       "Calculating Euclidean Distance:\n",
       "17.939899665271266\n",
       "Calculating Euclidean Distance:\n",
@@ -149,10 +149,12 @@
     "b = (3, -1.2, -2, -1, 7)  \n",
     "\n",
     "total = 0\n",
-    "\n",
-    "for i in range(5):\n",
-    "    dist += np.power(np.abs(a[i] - b[i]), 2)\n",
-    "    total = np.power(dist, 1/2)\n",
+    "if len(a) == len(b):\n",
+    "    for i in range(5):\n",
+    "        dist += np.power(np.abs(a[i] - b[i]), 2)\n",
+    "        total = np.power(dist, 1/2)\n",
+    "else:\n",
+    "    print('Lengths have to be equal')\n",
     "    \n",
     "print(dist)\n",
     "\n",
