--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 20"
+    "   # Expected Output: 20\n",
+    "a=[0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
+    "b=[1, -1, 5, 7, 14, 3, -2, 3, 3, 6]\n",
+    "\n"
    ]
   },
   {
