Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -176,33 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating Manhattan Distance:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "20.0"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "   # Expected Output: 20\n",
     "a=[0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
     "b=[1, -1, 5, 7, 14, 3, -2, 3, 3, 6]\n",
-    "\n",
-    "distance(a,b,c=1)\n"
+    "\n"
    ]
   },
   {
@@ -219,34 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calcuating Minkowski Distance (c=3.5):\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5.268789659188307"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "   # Expected Output: 5.268789659188307\n",
-    "    \n",
-    "a= (-2, 7, 3.4)\n",
-    "b=(3, 4, 1.5)\n",
-    "\n",
-    "distance(a,b,c=3.5)"
+    "   # Expected Output: 5.268789659188307"
    ]
   },
   {
